fixed collapsible button contents spacing

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -78,9 +78,10 @@ button:active {
   height: 100%;
 
   &::after {
-    content: "";
+    /* content: "";
     display: block;
     border-top: 1px solid colors.$font-primary;
+    margin-top: 0.4rem; */
   }
 }
 
